force-app/main/default/objects/Lead/fields/APS_1st_Period_Supply_Distribution__c.field-meta.xml
<CustomField>
    <fullName>APS_1st_Period_Supply_Distribution__c</fullName>
    <label>APS 1st Period Supply Distribution</label>
    <type>Date</type>
</CustomField>