force-app/main/default/objects/Lead/fields/APS_Comments__c.field-meta.xml
<CustomField>
    <fullName>APS_Comments__c</fullName>
    <description>Used to capture comments from the APS Interest Form</description>
    <label>APS Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>