force-app/main/default/objects/Lead/fields/APS_Distribution_Frequency__c.field-meta.xml
<CustomField>
    <fullName>APS_Distribution_Frequency__c</fullName>
    <label>APS Distribution Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Alternate Weeks or Twice Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>