force-app/main/default/objects/Lead/fields/APS_Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>APS_Distribution_Method__c</fullName>
    <label>APS Distribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agencies</fullName>
            </value>
            <value>
                <fullName>Individuals</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>