force-app/main/default/objects/Lead/fields/APS_Email_Hidden__c.field-meta.xml
<CustomField>
    <fullName>APS_Email_Hidden__c</fullName>
    <description>This field is used to map the email address through to the Account &quot;APS Primary Email&quot; field during lead conversion</description>
    <label>APS Email (Hidden)</label>
    <type>Email</type>
</CustomField>