force-app/main/default/objects/Lead/fields/APS_Individuals_Served_Monthly__c.field-meta.xml
<CustomField>
    <fullName>APS_Individuals_Served_Monthly__c</fullName>
    <label>APS Individuals Served Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>