force-app/main/default/objects/Lead/fields/APS_Partner_Agencies_This_Year__c.field-meta.xml
<CustomField>
    <fullName>APS_Partner_Agencies_This_Year__c</fullName>
    <label>APS Partner Agencies This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>