force-app/main/default/objects/Lead/fields/APS_PeriodProduct_Types__c.field-meta.xml
<CustomField>
    <fullName>APS_PeriodProduct_Types__c</fullName>
    <label>APS PeriodProduct Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pads</fullName>
            </value>
            <value>
                <fullName>Liners</fullName>
            </value>
            <value>
                <fullName>Tampons</fullName>
            </value>
            <value>
                <fullName>Reusable Cup</fullName>
            </value>
            <value>
                <fullName>Reusable Cloth Pads</fullName>
            </value>
            <value>
                <fullName>Other Item Not Listed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>