force-app/main/default/objects/Lead/fields/APS_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>APS_Program_Name__c</fullName>
    <label>APS Program Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>