force-app/main/default/objects/Lead/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Used to capture comments from the NDBN Interest Form</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>