force-app/main/default/objects/Lead/fields/Email_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmation__c</fullName>
    <description>Used to capture the confirmed email from the NDBN Interest form</description>
    <label>Email Confirmation</label>
    <type>Email</type>
</CustomField>