force-app/main/default/objects/Lead/fields/Internal_Staff_Note__c.field-meta.xml
<CustomField>
    <fullName>Internal_Staff_Note__c</fullName>
    <description>Membership team can use this text field as needed</description>
    <inlineHelpText>Membership team can use this text field as needed</inlineHelpText>
    <label>Staff Note</label>
    <type>TextArea</type>
</CustomField>