force-app/main/default/objects/Lead/fields/Membership_Area_Interests__c.field-meta.xml
<CustomField>
    <fullName>Membership_Area_Interests__c</fullName>
    <label>Membership Area Interests</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>