force-app/main/default/objects/Lead/fields/Organization_Website__c.field-meta.xml
<CustomField>
    <fullName>Organization_Website__c</fullName>
    <description>Field used to capture the orgnaizations website, and map it through to the Organization Account</description>
    <label>Organization Website</label>
    <type>Url</type>
</CustomField>