force-app/main/default/objects/Lead/fields/partdir_mp__AC_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__AC_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AC Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Marketplace Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>