force-app/main/default/objects/Lead/fields/partdir_mp__AC_Partner_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>partdir_mp__AC_Partner_Account_Id__c</fullName>
    <label>AC Partner Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>