force-app/main/default/objects/Lead/fields/Program_Development_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Development_To_Date__c</fullName>
    <label>Program Development To Date</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>