force-app/main/default/objects/Lead/fields/Program_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Legal_Status__c</fullName>
    <description>Used to capture the current programs legal status from the NDBN Interest Form</description>
    <label>Program Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>501(c)(3)</fullName>
            </value>
            <value>
                <fullName>Church In Good Standing</fullName>
            </value>
            <value>
                <fullName>Corporate Organization</fullName>
            </value>
            <value>
                <fullName>Donation Platform</fullName>
            </value>
            <value>
                <fullName>Fiscally sponsored</fullName>
            </value>
            <value>
                <fullName>Government Entity</fullName>
            </value>
            <value>
                <fullName>Loyalty Vendor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Private/Family Foundation</fullName>
            </value>
            <value>
                <fullName>Public School/Local Government</fullName>
            </value>
            <value>
                <fullName>No Legal Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>