force-app/main/default/objects/Lead/fields/Program_Organization_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Organization_Status__c</fullName>
    <label>Program Organization Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>501(c)(3)</fullName>
            </value>
            <value>
                <fullName>Church In Good Standing</fullName>
            </value>
            <value>
                <fullName>Public School/Local Government</fullName>
            </value>
            <value>
                <fullName>Fiscally sponsored</fullName>
            </value>
            <value>
                <fullName>Applied for 501(c)(3)</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>