force-app/main/default/objects/Lead/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diaper Program</fullName>
            </value>
            <value>
                <fullName>Diaper Pantry</fullName>
            </value>
            <value>
                <fullName>Diaper Bank</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>