force-app/main/default/objects/Lead/fields/Relationships_with_Other_Agencies__c.field-meta.xml
<CustomField>
    <fullName>Relationships_with_Other_Agencies__c</fullName>
    <description>Used to capture data from the NDBN Interest Form</description>
    <label>Relationships with Other Agencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>