force-app/main/default/objects/Lead/fields/SFGA__Correlation_Data__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Correlation_Data__c</fullName>
    <defaultValue>&quot;none&quot;</defaultValue>
    <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
    <label>Correlation Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>