force-app/main/default/objects/Lead/fields/SFGA__CorrelationID__c.field-meta.xml
<CustomField>
    <fullName>SFGA__CorrelationID__c</fullName>
    <defaultValue>&quot;none&quot;</defaultValue>
    <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
    <label>CorrelationID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>