force-app/main/default/objects/Lead/recordTypes/APS.recordType-meta.xml
<RecordType>
    <fullName>APS</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>APS</label>
</RecordType>