force-app/main/default/objects/Lead/recordTypes/Diapers.recordType-meta.xml
<RecordType>
    <fullName>Diapers</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Diapers</label>
</RecordType>