force-app/main/default/objects/Lead/listViews/All_Leads_Over_Time.listView-meta.xml
<ListView>
    <fullName>All_Leads_Over_Time</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.CONVERTED</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>APS_Program_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads Over Time</label>
</ListView>