force-app/main/default/objects/Lead/listViews/All_Open_Leads_APS.listView-meta.xml
<ListView>
    <fullName>All_Open_Leads_APS</fullName>
    <columns>APS_Program_Status__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>npsp__CompanyState__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Comments__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>closed</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.APS</value>
    </filters>
    <label>All Open Leads-APS</label>
</ListView>