force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>Program_Type__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.STATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>npsp__CompanyState__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CONVERTED</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>closed</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Diapers</value>
    </filters>
    <label>All Open Leads</label>
</ListView>